<!--
    Copyright (c) 2015 BlackBerry Limited.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:shrinkColumns="1"
    android:stretchColumns="0"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TableRow android:paddingBottom="5dp">

        <TextView
            android:id="@+id/sender_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sender_id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sender_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Null"
            android:textIsSelectable="true"
            android:textSize="18sp" />
    </TableRow>

    <TableRow android:paddingBottom="5dp">

        <TextView
            android:id="@+id/registration_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration_status"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registration_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Null"
            android:textIsSelectable="true"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />
    </TableRow>

    <TableRow android:paddingBottom="5dp">

        <TextView
            android:id="@+id/registration_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration_id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registration_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textIsSelectable="true"
            android:text="Null"
            android:textSize="18sp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/register" />

        <Button
            android:id="@+id/unregister_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/unregister" />
    </TableRow>
</TableLayout>
